apps/cryptpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptpad
  namespace: cryptpad
  labels:
    app.kubernetes.io/name: cryptpad
spec:
  selector:
    app.kubernetes.io/name: cryptpad
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: websocket
      port: 3003
      targetPort: 3003
  type: ClusterIP
