apps/cryptpad/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cryptpad-allow-tunnel
  namespace: cryptpad
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cryptpad
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-tunnel-ingress-controller
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 3001
